syntax = "proto3";

package protomodel;

message Credentials {
  string Operator = 1;
  string Username = 2;
  string Password = 3;
}

message UserLogin {
  string Username = 1;
  string Password = 2;
}

message UseLoginResponse {
  string Token = 1;
}


message ConsumptionResponse {
  int64 InternetTotal = 1;
  int64 InternetConsumed = 2;
  int32 CallTotal = 3;
  int32 CallConsumed = 4;
  int32 periodStart = 5;
  int32 periodEnd = 6;
  int32 updatedAt = 7;
  string phoneNumber = 8;
}


message AnonymousConsumptionRequest {
  string DeviceId = 1;
  Credentials Credentials = 2;
  string phoneNumber = 3;
}

message AnonymousCredentialsRequest {
  string DeviceId = 1;
  Credentials Credentials = 2;
}

message AnonymousCredentialsResponse {
  int32 CredentialsId = 1;
  repeated string phoneNumbers = 2;
}

enum NotificationCommandType {
    CONSUMPTION = 0;
}

message NotificationConsumptionCommand {
  repeated ConsumptionResponse consumption = 1;
}